2004-07-21 Duncan <dc_junk@yahoo.co.uk>

	* gtksourceview/language-specs/haskell.lang: new file, adds support
	for Haskell language. First version of the file by Anders Carlsson
	<andersca@gnome.org>.

2004-07-21 John Luke <jluke@cfl.rr.com>

	* gtksourceview/language-specs/vbnet.lang: new file, adds support
	for VB.NET language.

2004-07-21  Arnaud LE ROUZIC <lerouzic@pge.cnrs-gif.fr>

	* gtksourceview/language-specs/perl.lang: 
	a string starting by $# must not be considered as a comment.

2004-07-21  Gavin Brown <gavin.brown@uk.com>

	* gtksourceview/language-specs/perl.lang: adds support for
	Perl's POD documentation. Also adds in method calls ($object->method) 
	and the "our" keyword. Makes strings multiline.

2004-07-20  Paolo Maggi  <paolo.maggi@polito.it>

	* configure.in: version 1.1.0

2004-07-15  Owen Taylor  <otaylor@redhat.com>

	#143874: Use Pango for printing

	* configure.in: Require gnome-print >= 2.7 for new Pango integration.

	* gtksourceview/gtksourceprintjob.[ch] docs/reference/gtksourceview-sections.txt:
	Add functions to set the various fonts as Pango font descriptions rather
	than gnome-print font names.
	gtk_source_print_job_{set,get}_{,numbers_,header_footer_}font_desc().
	Also add "{,numbers_,header_footer_}font_desc" properties.

	* gtksourceview/gtksourceprintjob.c: Rewrite printing code to 
	use Pango and gnome-print functions to print Pango objects rather than
	being a separate implementation of layout.

	* gtksourceview/gtksourceprintjob.c (gtk_source_print_job_get_property):
	Fix memory leak for FONT properties.

	* gtksourceview/gtksourceprintjob.c (get_text_with_style): Improve
	performance of tag toggle searches for large unstyled buffers.
	(Don't search for the next tag toggle for each line.)

2004-06-21  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/language-specs/lua.lang: Lua syntax language file
	by b.lindeijer@xs4all.nl
	* gtksourceview/language-specs/Makefile.am: Added lua.lang
